--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "start": "webpack serve --config webpack.dev.js",
         "build:prod": "webpack --config webpack.prod.js",
-        "clean": "rm -rf /build",
+        "clean": "rm -rf /docs",
         "build": "npm-run-all clean build:prod"
     },
     "devDependencies": {
